force-app/main/default/objects/KDCE_TempObjectForLookupField__c/KDCE_TempObjectForLookupField__c.object-meta.xml
<CustomObject>
    <description>Aura Component Lookup Field 관리를 위한 임시 오브젝트</description>
    <label>Temp Object for Lookup Field</label>
    <nameField>
        <label>KDCE_TempObjectForAuraComponent Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Temp Object for Lookup Field</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>