force-app/main/default/objects/KDCE_TempObjectForLookupField__c/fields/Asset__c.field-meta.xml
<CustomField>
    <fullName>Asset__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Asset</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>Asset.ContactId</field>
            <operation>equals</operation>
            <value></value>
        </filterItems>
        <filterItems>
            <field>Asset.Status</field>
            <operation>equals</operation>
            <value>Produced, Active</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Temp Object for Lookup Field</relationshipLabel>
    <relationshipName>TempObjectforLookupField</relationshipName>
    <type>Lookup</type>
</CustomField>