force-app/main/default/objects/KDCE_TempObjectForLookupField__c/fields/AssetVersion__c.field-meta.xml
<CustomField>
    <fullName>AssetVersion__c</fullName>
    <label>Asset Version</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2.4 PLUS</fullName>
            </value>
            <value>
                <fullName>3.0M</fullName>
            </value>
            <value>
                <fullName>3.0</fullName>
            </value>
            <value>
                <fullName>3.1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>