force-app/main/default/objects/KDCE_TempObjectForLookupField__c/fields/CCR_ReplacementChannelNew__c.field-meta.xml
<CustomField>
    <fullName>CCR_ReplacementChannelNew__c</fullName>
    <description>Offline Program에서 Asset Replacement에 관한 필드를 작성하기 위한 임시 필드.</description>
    <label>Replacement Channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Direct Retail</fullName>
            </value>
            <value>
                <fullName>Indirect Retail</fullName>
            </value>
            <value>
                <fullName>Field Sales Force</fullName>
            </value>
            <value>
                <fullName>Service Point</fullName>
            </value>
            <value>
                <fullName>Pickup Point</fullName>
            </value>
            <value>
                <fullName>LSP</fullName>
            </value>
            <value>
                <fullName>LSP SHIFT-X</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>