force-app/main/default/objects/KDCE_TempObjectForLookupField__c/fields/CCR_ReplacementExternalReference__c.field-meta.xml
<CustomField>
    <fullName>CCR_ReplacementExternalReference__c</fullName>
    <description>Offline Program에서 Asset Replacement에 관한 필드를 작성하기 위한 임시 필드.</description>
    <label>Replacement External Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>