force-app/main/default/objects/KDCE_TempObjectForLookupField__c/fields/CCR_ReplacementReasonHolder__c.field-meta.xml
<CustomField>
    <fullName>CCR_ReplacementReasonHolder__c</fullName>
    <label>Replacement Reason (Holder)</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>AssetVersion__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Blinking red bottom light</fullName>
            </value>
            <value>
                <fullName>Blinking Red Light</fullName>
            </value>
            <value>
                <fullName>Bluetooth Malfunction</fullName>
            </value>
            <value>
                <fullName>Broken Heating Blade</fullName>
            </value>
            <value>
                <fullName>Cap start error</fullName>
            </value>
            <value>
                <fullName>Charger capacity less than 20 holder charges</fullName>
            </value>
            <value>
                <fullName>Customer returns device for upgrade</fullName>
            </value>
            <value>
                <fullName>Device start error</fullName>
            </value>
            <value>
                <fullName>Fixed Red Light or No Light</fullName>
            </value>
            <value>
                <fullName>Functioning</fullName>
            </value>
            <value>
                <fullName>Functioning Device replacement due to out of stock</fullName>
            </value>
            <value>
                <fullName>Functioning Device returned for Recycling</fullName>
            </value>
            <value>
                <fullName>Holder Battery Capacity Low</fullName>
            </value>
            <value>
                <fullName>Other Software Malfunction</fullName>
            </value>
            <value>
                <fullName>P.Charger not charging</fullName>
            </value>
            <value>
                <fullName>Physical Damages</fullName>
            </value>
            <value>
                <fullName>Short Experience Duration</fullName>
            </value>
            <value>
                <fullName>Top Light not Turning On</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>