force-app/main/default/objects/KDCE_TempObjectForLookupField__c/fields/CCR_ReplacementSponsored_By__c.field-meta.xml
<CustomField>
    <fullName>CCR_ReplacementSponsored_By__c</fullName>
    <description>Offline Program에서 Asset Replacement에 관한 필드를 작성하기 위한 임시 필드.</description>
    <label>Replacement Sponsored By</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Warranty</fullName>
            </value>
            <value>
                <fullName>Subscription</fullName>
            </value>
            <value>
                <fullName>Goodwill</fullName>
            </value>
            <value>
                <fullName>Care+</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>