force-app/main/default/objects/KDCE_TempObjectForLookupField__c/fields/CCR_ReplacementSponsored_ByCharger__c.field-meta.xml
<CustomField>
    <fullName>CCR_ReplacementSponsored_ByCharger__c</fullName>
    <label>Replacement Sponsored By (Charger)</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>AssetVersion__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Warranty</fullName>
            </value>
            <value>
                <fullName>Subscription</fullName>
            </value>
            <value>
                <fullName>Goodwill</fullName>
            </value>
            <value>
                <fullName>Care+</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>