force-app/main/default/objects/KDCE_TempObjectForLookupField__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Temp Object for Lookup Field</relationshipLabel>
    <relationshipName>TempObjectforLookupField</relationshipName>
    <type>Lookup</type>
</CustomField>