force-app/main/default/objects/KDCE_TempObjectForLookupField__c/fields/Coupon__c.field-meta.xml
<CustomField>
    <fullName>Coupon__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Coupon</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>발급 된 MGM 쿠폰만 검색 가능합니다.</errorMessage>
        <filterItems>
            <field>KDCE_Coupon__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>MGM</value>
        </filterItems>
        <filterItems>
            <field>KDCE_Coupon__c.Status__c</field>
            <operation>equals</operation>
            <value>Issue, Use</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>KDCE_Coupon__c</referenceTo>
    <relationshipLabel>Temp Object for Lookup Field</relationshipLabel>
    <relationshipName>TempObjectforLookupField</relationshipName>
    <type>Lookup</type>
</CustomField>